Fixed alignment issue

--- a/src/admin/components/InventoryReportTable/InventoryReportTable.scss
+++ b/src/admin/components/InventoryReportTable/InventoryReportTable.scss
@@ -27,6 +27,12 @@
 }
 
 .sub-table{
+  border-left-color: white;
+  border-left-style: solid;
+  border-left-width: 20px;
+  border-right-color: white;
+  border-right-style: solid;
+  border-right-width: 20px;
   margin-bottom: -1px !important;
 }
 
